--- a/hotel/.env
+++ b/hotel/.env
@@ -4,7 +4,7 @@ NATURAL_LANGUAGE_UNDERSTANDING_URL=https://gateway-lon.watsonplatform.net/natura
 DISCOVERY_IAM_APIKEY=kSffRY1O9ZDbGH-zJ762-5m3UetlwNHN2jFyERipnWfZ
 DISCOVERY_URL=https://gateway-lon.watsonplatform.net/discovery/api
 
-DISCOVERY_COllECTION_ID =a1cbdf97-9e04-4e5f-93ef-aaaaf3751d68
+DISCOVERY_COLLECTION_ID =a1cbdf97-9e04-4e5f-93ef-aaaaf3751d68
 DISCOVERY_ENVIRONMENT_ID=d733c331-035f-40f8-9aef-c85dcab3f441
 
 
